# Fix2Fit

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  all_issue_ids_ffmpeg.txt  all_issue_ids_libarchive.txt  all_issue_ids_openjpeg.txt  all_issue_ids_proj4.txt  all_issue_ids_wireshark.txt  build_llvm-3.8.1.sh  copy_to_ossfuzz.sh  delete_driver.sh  delete_options.sh  insert_copy_statement.sh  rebuild_makefile.sh  run.sh  update_f1x
demo/ffmpeg_1345/: 31:0:0:0:10.patch  31:0:0:0:11.patch  31:0:0:0:12.patch  31:0:0:0:13.patch  31:0:0:0:14.patch  31:0:0:0:4.patch  31:0:0:0:5.patch  31:0:0:0:6.patch  31:0:0:0:7.patch  31:0:0:0:8.patch  31:0:0:0:9.patch  4:0:0:0:0.patch  patch_generation.txt
demo/ffmpeg_1378/: 119:0:1043:0:11.patch  119:0:1044:0:12.patch  119:0:523:0:12.patch  80:0:1043:0:13.patch  80:0:1043:0:14.patch  80:0:1043:0:16.patch  80:0:1044:0:0.patch  80:0:1044:0:15.patch  80:0:523:0:13.patch  80:0:523:0:14.patch  80:0:523:0:16.patch  80:0:524:0:15.patch
demo/ffmpeg_1473/: 119:0:523:0:0.patch  119:0:523:0:1.patch  119:0:523:0:2.patch  119:0:523:0:3.patch  119:0:523:0:4.patch
demo/ffmpeg_1643/: 1:0:58:0:0.patch  25:0:13:0:0.patch  25:0:18:0:0.patch  25:0:51:0:11.patch  25:0:51:0:12.patch  25:0:51:0:13.patch  25:0:51:0:14.patch  25:0:51:0:15.patch  25:0:51:0:16.patch  25:0:52:0:10.patch  25:0:52:0:11.patch  25:0:52:0:12.patch  25:0:52:0:13.patch  25:0:52:0:14.patch  25:0:52:0:15.patch  25:0:52:0:16.patch  25:0:55:0:0.patch  25:0:58:0:0.patch  6:0:0:0:0.patch
demo/libarchive_1627/: 17:0:23:0:10.patch  17:0:23:0:11.patch  17:0:23:0:9.patch  17:0:24:0:11.patch  17:0:24:0:12.patch  17:0:24:0:9.patch  33:0:23:0:10.patch  33:0:23:0:11.patch  33:0:23:0:9.patch  33:0:24:0:11.patch  33:0:24:0:12.patch  33:0:24:0:9.patch
demo/libarchive_2394/: 1:0:153:0:8.patch  1:0:155:0:9.patch  1:0:156:0:8.patch  21:0:153:0:8.patch  21:0:155:0:9.patch  21:0:156:0:8.patch  23:0:153:0:8.patch  43:0:153:0:8.patch  45:0:153:0:8.patch  65:0:153:0:8.patch  65:0:156:0:8.patch  68:0:100:0:8.patch
demo/proj4/: build.sh  config.sh  run_proj.sh
docs/: prepare_fix2fit.md
f1x/: .gitignore  CMakeLists.txt  Config.h.in  Dockerfile  README.md
f1x/CInterface/: Makefile  f1x-aflgo.c
f1x/doc/: Benchmarking.md  BuildFromSource.md  Development.md  Docker.md  Manual.md  Troubleshooting.md
f1x/infra/: Dockerfile  download_build_install_llvm.sh
f1x/repair/: CMakeLists.txt  Core.h  FaultLocalization.cpp  FaultLocalization.h  Global.cpp  Global.h  Partitions.cpp  Partitions.h  Prioritization.cpp  Prioritization.h  Process.cpp  Process.h  Profiler.cpp  Profiler.h  Project.cpp  Project.h  Repair.cpp  Repair.h  Runtime.cpp  Runtime.h  SearchEngine.cpp  SearchEngine.h  Synthesis.cpp  Synthesis.h  Typing.cpp  Typing.h  Util.cpp  Util.h
f1x/tests/: runall.sh
f1x/tests/array-subscripts/: Notes.txt  program.c
f1x/tests/assign-in-condition/: Notes.txt  program.c
f1x/tests/break/: Notes.txt  program.c  test.sh
f1x/tests/cast-expr/: program.c
f1x/tests/dangling-else/: Notes.txt  program.c
f1x/tests/deletion/: Notes.txt  program.c  test.sh
f1x/tests/divide-by-zero/: Notes.txt  program.c  test.sh
f1x/tests/guarded-assignment/: Notes.txt  program.c
f1x/tests/if-condition/: Notes.txt  program.c
f1x/tests/incomplete-pointee/: Notes.txt  def.c  def.h  program.c
f1x/tests/inside-ifdef/: program.c
f1x/tests/int-assignment/: program.c
f1x/tests/intersect-ifdef/: Notes.txt  program.c
f1x/tests/localization/: Makefile  Notes.txt  file1.c  file1.h  file2.c  file2.h  file3.c  file3.h  lib.c  lib.h  program.c  test.sh
f1x/tests/loop-condition/: Notes.txt  program.c  test.sh
f1x/tests/memberexpr/: Makefile  Notes.txt  program.c  test.sh
f1x/tests/multifile/: Makefile  Notes.txt  lib.c  lib.h  program.c
f1x/tests/non-integer-member/: Notes.txt  program.c
f1x/tests/null-dereference/: Notes.txt  program.c
f1x/tests/pointer/: Notes.txt  program.c  test.sh
f1x/tests/pointer-arithmetic/: Notes.txt  program.c  test.sh
f1x/tests/refine-condition/: Notes.txt  program.c  test.sh
f1x/tests/replace-constant/: Notes.txt  program.c  test.sh
f1x/tests/return/: Notes.txt  program.c  test.sh
f1x/tests/signed-int-overflow/: Makefile  Notes.txt  program.c  test.sh
f1x/tests/substitute-bool2/: Notes.txt  program.c  test.sh
f1x/tools/: CMakeLists.txt  F1X.cpp  F1X.h  F1XBench.cpp  F1XTransform.cpp  f1x-cc
f1x/transform/: CMakeLists.txt  PatchApplication.cpp  PatchApplication.h  ProfileInstrumentation.cpp  ProfileInstrumentation.h  SchemaApplication.cpp  SchemaApplication.h  SearchSpaceMatchers.cpp  SearchSpaceMatchers.h  TransformGlobal.cpp  TransformGlobal.h  TransformUtil.cpp  TransformUtil.h
infra/: helper.py
libexif_14545/: libexif_14545.config  project_build.sh
projects/: all_issue_ids_ffmpeg.txt  all_issue_ids_proj4.txt  clean.sh  issue_info.txt  prepare_docker.sh  prepare_proj4.sh  subject_build.sh
projects/arduinojson/: Dockerfile
projects/bad_example/: Dockerfile
projects/boost/: Dockerfile  boost_regex_fuzzer.cc
projects/boringssl/: Dockerfile
projects/botan/: Dockerfile
projects/brotli/: Dockerfile
projects/c-ares/: Dockerfile
projects/cmark/: Dockerfile
projects/curl/: Dockerfile
projects/dlplibs/: Dockerfile
projects/dropbear/: Dockerfile
projects/example/: Dockerfile
projects/expat/: Dockerfile
projects/ffmpeg/: .build.sh.swp  Dockerfile  build.sh  build_back.sh  build_dependency.sh  driver  project_build.sh  project_config.sh
projects/ffmpeg_1345/: Dockerfile  ffmpeg_1345.config  project_config.sh
projects/gdal/: Dockerfile  build.sh
projects/h2o/: Dockerfile
projects/icu_15613/: Dockerfile  icu_15613.config  project.yaml  project_build.sh  project_config.sh  testcase
scripts/: SharedMemorySetter.h  afl-fuzz.c  afl_driver.cpp  build.sh  build_aflgo.sh  build_llvm-3.8.1.sh  compile_libfuzzengine.sh  config.h  driver  new_run.sh  rebuild_makefile.sh  run.sh  run_ffmpeg.sh  run_libarchive.sh  run_libchewing.sh  run_libssh.sh  run_openjpeg.sh  run_proj4.sh  template.config
yara_12424/: project.yaml
(+256 files in other folders)
